# cpp-doom

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING.md  HACKING.md  NEWS.md  NOT-BUGS.md  PHILOSOPHY.md  README.Music.md  README.Strife.md  README.md  TODO.md  demo-check.sh  vcpkg.json
.github/: CONTRIBUTING.md
.github/workflows/: clang-tidy.yml  cmake.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  toolchain.cmake  vcpkg.cmake
data/: convert-icon
data/demos/: README.md  bohfight.lmp  bohfight.txt
man/: CMDLINE.template.md  INSTALL.template  docgen  simplecpp  strife.template
midiproc/: CMakeLists.txt  buffer.cpp  buffer.hpp  main.cpp  proto.hpp
opl/: CMakeLists.txt  ioperm_sys.cpp  ioperm_sys.hpp  opl.cpp  opl.hpp  opl3.cpp  opl3.hpp  opl_internal.hpp  opl_linux.cpp  opl_obsd.cpp  opl_queue.cpp  opl_queue.hpp  opl_sdl.cpp  opl_timer.cpp  opl_timer.hpp  opl_win32.cpp
opl/examples/: droplay.cpp
pcsound/: CMakeLists.txt  pcsound.cpp  pcsound.hpp  pcsound_bsd.cpp  pcsound_internal.hpp  pcsound_linux.cpp  pcsound_sdl.cpp  pcsound_win32.cpp
pkg/osx/: AppController.hpp  AppController.m  Execute.hpp  Execute.m  IWADController.hpp  IWADController.m  LauncherManager.hpp  LauncherManager.m  cp-with-libs  main.m
pkg/win32/: cp-with-libs
src/: CMakeLists.txt  aes_prng.cpp  aes_prng.hpp  crispy.cpp  crispy.hpp  d_dedicated.cpp  d_event.cpp  d_event.hpp  d_iwad.cpp  d_iwad.hpp  d_loop.cpp  d_loop.hpp  d_mode.cpp  d_mode.hpp  d_ticcmd.hpp  deh_defs.hpp  deh_io.cpp  deh_io.hpp  deh_main.cpp  deh_main.hpp  deh_mapping.cpp  deh_mapping.hpp  deh_str.cpp  deh_str.hpp  deh_text.cpp  doomkeys.hpp  doomtype.hpp  gusconf.cpp  gusconf.hpp  i_cdmus.cpp  i_cdmus.hpp  i_endoom.cpp  i_endoom.hpp  i_glob.cpp  i_glob.hpp  i_input.cpp  i_input.hpp  i_joystick.cpp  i_joystick.hpp  i_main.cpp  (+95 more)
src/doom/: CMakeLists.txt  am_map.cpp  am_map.hpp  d_englsh.hpp  d_items.cpp  d_items.hpp  d_main.cpp  d_main.hpp  d_net.cpp  d_player.hpp  d_textur.hpp  d_think.hpp  deh_ammo.cpp  deh_bexincl.cpp  deh_bexpars.cpp  deh_bexpars.hpp  deh_bexptr.cpp  deh_bexstr.cpp  deh_cheat.cpp  deh_doom.cpp  deh_frame.cpp  deh_misc.cpp  deh_misc.hpp  deh_ptr.cpp  deh_sound.cpp  deh_thing.cpp  deh_weapon.cpp  doomdata.hpp  doomdef.cpp  doomdef.hpp  doomstat.cpp  doomstat.hpp  dstrings.cpp  dstrings.hpp  event_function_decls.hpp  f_finale.cpp  f_finale.hpp  f_wipe.cpp  f_wipe.hpp  g_game.cpp  (+85 more)
src/heretic/: CMakeLists.txt  am_data.hpp  am_map.cpp  am_map.hpp  ct_chat.cpp  ct_chat.hpp  d_main.cpp  d_net.cpp  deh_ammo.cpp  deh_frame.cpp  deh_htext.cpp  deh_htic.cpp  deh_htic.hpp  deh_sound.cpp  deh_thing.cpp  deh_weapon.cpp  doomdata.hpp  doomdef.hpp  dstrings.hpp  f_finale.cpp  g_game.cpp  in_lude.cpp  info.cpp  info.hpp  m_random.cpp  m_random.hpp  mn_menu.cpp  p_action.hpp  p_ceilng.cpp  p_doors.cpp  p_enemy.cpp  p_floor.cpp  p_inter.cpp  p_lights.cpp  p_local.hpp  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_plats.cpp  p_pspr.cpp  (+22 more)
src/hexen/: CMakeLists.txt  a_action.cpp  action_hook.hpp  am_data.hpp  am_map.cpp  am_map.hpp  ct_chat.cpp  ct_chat.hpp  d_net.cpp  f_finale.cpp  g_game.cpp  h2_main.cpp  h2def.hpp  in_lude.cpp  info.cpp  info.hpp  m_random.cpp  m_random.hpp  mn_menu.cpp  p_acs.cpp  p_anim.cpp  p_ceilng.cpp  p_doors.cpp  p_enemy.cpp  p_floor.cpp  p_inter.cpp  p_lights.cpp  p_local.hpp  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_plats.cpp  p_pspr.cpp  p_setup.cpp  p_sight.cpp  p_spec.cpp  p_spec.hpp  p_switch.cpp  p_telept.cpp  p_things.cpp  (+23 more)
src/setup/: CMakeLists.txt  compatibility.cpp  compatibility.hpp  display.cpp  display.hpp  execute.cpp  execute.hpp  joystick.cpp  joystick.hpp  keyboard.cpp  keyboard.hpp  mainmenu.cpp  mode.cpp  mode.hpp  mouse.cpp  mouse.hpp  multiplayer.cpp  multiplayer.hpp  setup_icon.cpp  sound.cpp  sound.hpp  txt_joyaxis.cpp  txt_joyaxis.hpp  txt_joybinput.cpp  txt_joybinput.hpp  txt_keyinput.cpp  txt_keyinput.hpp  txt_mouseinput.cpp  txt_mouseinput.hpp
src/strife/: CMakeLists.txt  action_hook.hpp  action_hooks.hpp  am_map.cpp  am_map.hpp  d_englsh.hpp  d_items.cpp  d_items.hpp  d_main.cpp  d_main.hpp  d_net.cpp  d_player.hpp  d_textur.hpp  d_think.hpp  deh_ammo.cpp  deh_cheat.cpp  deh_frame.cpp  deh_misc.cpp  deh_misc.hpp  deh_ptr.cpp  deh_sound.cpp  deh_strife.cpp  deh_thing.cpp  deh_weapon.cpp  doomdata.hpp  doomdef.cpp  doomdef.hpp  doomstat.cpp  doomstat.hpp  dstrings.cpp  dstrings.hpp  f_finale.cpp  f_finale.hpp  f_wipe.cpp  f_wipe.hpp  g_game.cpp  g_game.hpp  hu_lib.cpp  hu_lib.hpp  hu_stuff.cpp  (+67 more)
test/: CMakeLists.txt  test_m_bbox.cpp  test_m_mapmath.cpp  test_string_functions.cpp  tests.cpp
test/cpp_doom/: CMakeLists.txt  test_string_functions.cpp  test_z_native.cpp
test/dehacked/: CMakeLists.txt  test_z_zone.cpp
textscreen/: CMakeLists.txt  textscreen.hpp  txt_button.cpp  txt_button.hpp  txt_checkbox.cpp  txt_checkbox.hpp  txt_conditional.cpp  txt_conditional.hpp  txt_desktop.cpp  txt_desktop.hpp  txt_dropdown.cpp  txt_dropdown.hpp  txt_fileselect.cpp  txt_fileselect.hpp  txt_gui.cpp  txt_gui.hpp  txt_inputbox.cpp  txt_inputbox.hpp  txt_io.cpp  txt_io.hpp  txt_label.cpp  txt_label.hpp  txt_main.hpp  txt_radiobutton.cpp  txt_radiobutton.hpp  txt_scrollpane.cpp  txt_scrollpane.hpp  txt_sdl.cpp  txt_sdl.hpp  txt_separator.cpp  txt_separator.hpp  txt_spinctrl.cpp  txt_spinctrl.hpp  txt_strut.cpp  txt_strut.hpp  txt_table.cpp  txt_table.hpp  txt_utf8.cpp  txt_utf8.hpp  txt_widget.cpp  (+5 more)
textscreen/examples/: CMakeLists.txt  calculator.cpp  guitest.cpp
textscreen/fonts/: codepage.hpp  convert-font  large.hpp  normal.hpp  small.hpp
utils/: action_hook.hpp  cstring_view.hpp  lump.hpp  memory.hpp
win32/: win_opendir.cpp  win_opendir.hpp
